package test

import (
	commonpb "github.com/openimsdk/openim-sdk-core/v3/proto/go/common"
)

const (
	APIADDR = "http://172.16.8.135:10002"
	WSADDR  = "ws://172.16.8.135:10001"

	UserID = "3624967544"
)

//const (
//	APIADDR = "http://172.16.8.135:10002"
//	WSADDR  = "ws://172.16.8.135:10001"
//
//	UserID = "4703677104"
//)

const (
	PlatformID  = commonpb.Platform_Linux
	Secret      = "openIM123"
	AdminUserID = "imAdmin"
)
